@@ -2,6 +2,8 @@
 
 	* info/display.c (display_update_one_window): Clear lines with
 	highlights in them properly.
+	* info/display.c (display_update_window_1): Go to new line properly
+	when highlighted region crosses line.
 
 2014-09-01  Gavin Smith  <gavinsmith0123@gmail.com>
 
